// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "shop-goframe-micro-service/app/goods/api/pbentity";

import "google/protobuf/timestamp.proto";

message GoodsInfo {
    uint32                    Id               = 1;  //
    string                    Name             = 2;  // 商品名字
    string                    Images           = 3;  // 支持单图,多图
    string                    PicUrl           = 4;  // 主图URL
    int32                     Price            = 5;  // 价格(分)
    int32                     Sort             = 6;  // 排序 倒序
    int32                     Level1CategoryId = 7;  // 1级分类id
    int32                     Level2CategoryId = 8;  // 2级分类id
    int32                     Level3CategoryId = 9;  // 3级分类id
    string                    Brand            = 10; // 品牌
    int32                     Stock            = 11; // 库存
    int32                     Sale             = 12; // 销量
    string                    Tags             = 13; // 标签
    string                    DetailInfo       = 14; // 商品详情
    google.protobuf.Timestamp CreatedAt        = 15; //
    google.protobuf.Timestamp UpdatedAt        = 16; //
    google.protobuf.Timestamp DeletedAt        = 17; //
}